# rust-topic

./: Cargo.toml  README.md
src/: errors.rs  main.rs  routes.rs  state.rs
src/dbaccess/: mod.rs  topic.rs  tutor.rs
src/handlers/: general.rs  mod.rs  topic.rs  tutor.rs
src/models/: mod.rs  topic.rs  tutor.rs
src/sql_scripts/: seed.sql
